2007-12-06  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (ViewSpec): Removed option
	`on_line_commit'.  Updated docstring for `cleanup'.

	* pytis/form/list.py (ListForm._can_filter_by_cell): New method.
	(ListForm._on_line_commit): Call `cleanup' instead of
	`on_line_commit'.
	(ListForm._cmd_insert_line): Disable inline insert if
	`on_new_record' is defined.
	(ListForm._edit_cell): Disable inline editation if
	`on_edit_record' is defined.

	* pytis/form/screen.py (wx_text_view): Updated for recent LCG
	version.

2007-12-05  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/list.py (SideBrowseForm.on_selection): Don't reset
	filtering after main form selection.

2007-11-30  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/request.py (FileUpload.filename): Docstring imporoved.

	* pytis/web/form.py: Escape the URI passed to form action.

2007-11-25  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/__init__.py: Define `debug'.

	* pytis/web/form.py (EditForm.__init__): Treat `layout.order()' as
	a tuple.

	* pytis/presentation/spec.py (LayoutSpec.__init__): Store the
	`order' as a tuple.

	* pytis/data/postgresql.py
	(PostgreSQLStandardBindingHandler._pdbb_coalesce): Cast `DateTime'
	to `timestamp', not `date'.

	* pytis/data/_test.py (DataEnumerator.test_get): Use
	`DataEnumerator.row()' instead of `DataEnumerator.get()'.
	(DBDataDefault.setUp): Pass `DataEnumerator' instance as
	`enumerator' to `DBColumnBinding', not just a data object.

2007-11-01  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (Form.__init__): Assertion fixed.

2007-10-30  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (ViewSpec): Docstring updated.

2007-10-25  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (LayoutForm): Added support for
	horizontal groups.  Respect empty labels.  Stretch horizontal
	groups to page width.

	* pytis/presentation/spec.py (GroupSpec): Automatically convert
	sequences to vertical groups.
