@@ -1,3 +1,13 @@
+2007-12-07  Tomas Cerha  <cerha@brailcom.org>
+
+	* pytis/web/form.py (BrowseForm): Added support for named styles.
+
+	* pytis/presentation/spec.py (Style): New constructor argument and
+	method `name'.
+	(FieldStyle, FIELD_STYLE_DEFAULT, FIELD_STYLE_EMPHASIS)
+	(FIELD_STYLE_WARNING): Removed.
+	(ViewSpec): Default value of `row_style' set to None.
+
 2007-12-06  Tomas Cerha  <cerha@brailcom.org>
 
 	* pytis/presentation/spec.py (ViewSpec): Removed option
